--- a/client/src/components/styles/navbar.css
+++ b/client/src/components/styles/navbar.css
@@ -1,12 +1,15 @@
 * {
   margin: 0;
   padding: 0;
-  font-family:  sans-serif;
+  font-family: sans-serif;
+  z-index: 0;
 }
 .container {
   width: 100%;
-  /* height: 100vh; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  position: fixed;
+
 }
 .logo {
   height: 30px;
@@ -23,6 +26,8 @@
   margin: auto;
   padding-top: 20px;
   padding-bottom: 20px;
+
+
 }
 .navbar .logo {
   font-size: 1.5em;
